<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="411dp"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/flamencos"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title_place"
            style="@style/Texto_titulo"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/titulo_poi"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/info_general_text_view"
            style="@style/Texto_subtitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/info_general"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/descripcion_info_general_text_view"
            style="@style/Texto_descripcion"
            android:layout_width="0dp"
            android:layout_height="165dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/descripcion_info_general"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_general_text_view" />

        <TextView
            android:id="@+id/ubicacion_text_view"
            style="@style/Texto_subtitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/ubicacion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcion_info_general_text_view" />

        <TextView
            android:id="@+id/descripcion_ubicacion_text_view"
            style="@style/Texto_descripcion"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/descripcion_ubicacion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ubicacion_text_view" />

        <TextView
            android:id="@+id/temperatura_text_view"
            style="@style/Texto_subtitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/temperatura"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcion_ubicacion_text_view" />

        <TextView
            android:id="@+id/descripcion_temperatura_text_view"
            style="@style/Texto_descripcion"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/descripcion_temperatura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperatura_text_view" />

        <TextView
            android:id="@+id/datos_relevantes_text_view"
            style="@style/Texto_subtitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/datos_relevantes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcion_temperatura_text_view" />

        <TextView
            android:id="@+id/descripcion_datos_relevantes_text_view"
            style="@style/Texto_descripcion"
            android:layout_width="0dp"
            android:layout_height="325dp"
            android:layout_marginEnd="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/descripcion_datos_relevantes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datos_relevantes_text_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>